samples/_failures_safe/1761296837_b582ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_281bb1ef.c: In function ‘main’:
./samples/SAFE/__tmp_281bb1ef.c:153:5: error: expected declaration or statement at end of input
  153 |     for (size_t i = 0; i < decompressed.size; i++) {
      |     ^~~
./samples/SAFE/__tmp_281bb1ef.c:153:5: error: expected declaration or statement at end of input
